# rag-kg

./: .gitignore  README.md
serve/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml
serve/.github/workflows/: ci.yml  eval-pr.yml
serve/apps/_shared/: __init__.py
serve/apps/_shared/factories/: __init__.py  builders.py  community_runner.py  ingest_runner.py  minio_presign.py
serve/apps/_shared/persistence/: __init__.py  library_fs.py
serve/apps/api/: __init__.py  _activity_reader.py  _eval_deps.py  _notification_reader.py  _orchestration_deps.py  _task_deps.py  auth.py  deps.py  main.py  sse.py
serve/apps/api/middleware/: __init__.py  error_handler.py  rate_limit.py  request_id.py  sse_bridge.py
serve/apps/api/routes/: __init__.py  activity.py  conversations.py  documents.py  eval.py  feedback.py  frontend_chat.py  frontend_documents.py  frontend_evaluation.py  frontend_graph.py  frontend_libraries.py  frontend_reviews.py  frontend_shell.py  ingest.py  libraries.py  library_settings.py  notifications.py  review.py  search.py  tasks.py
serve/apps/api/schemas/: __init__.py  activity.py  documents.py  notifications.py  purge.py  search.py  settings.py
serve/apps/cli/: __init__.py  main.py
serve/apps/worker/: __init__.py  main.py
serve/apps/worker/jobs/: __init__.py  _stages.py  base.py  eval_snapshot.py  extract_kg.py  ingest_batch.py  (+8 more)
serve/data/: README.md
serve/docs/: ADR_REVIEW.md  AGENT_PROMPT.md  API_REFERENCE.md  BACKEND_ROADMAP.md  CODING_STANDARDS.md  EVAL_ARCHITECTURE.md  FRONTEND_CODING_STANDARDS.md  FRONTEND_DESIGN_SPEC.md  FRONTEND_RULES.md  OPERATOR_RUNBOOK.md  PRD.md  PROJECT_OVERVIEW.md  SECURITY_REVIEW_M7.md  UI_GALLERY.md  UI_PROMPTS.md  UI_UX.md  USER_GUIDE.md  openapi.json
serve/docs/adr/: 0001-modular-monolith.md  0002-toolchain-selection.md  0003-library-as-data-partition.md  0004-community-detection-louvain-vs-leiden.md  0005-community-summary-prompt-design.md  0006-local-vs-global-routing.md  0007-m7-error-envelope-and-sse.md  0008-context-management.md  0009-async-task-queue.md  0010-sse-task-progress-events.md  0011-notification-center.md  0012-per-library-config-overrides.md  0013-library-status-machine.md  0014-activity-log-l5-aggregation.md  0015-daily-cost-cap.md  0016-var-computation.md  0017-self-rag-and-strategy-routing.md  0018-reranker-selection.md  0019-zip-folder-upload-pipeline.md  0020-hypothesis-scoring.md  0021-eval-alerts.md  0022-library-purge-atomicity.md  0023-command-palette-search.md
serve/docs/examples/: 01_create_library.ipynb  02_ingest_papers.ipynb  03_qa_with_kg.ipynb
serve/docs/runbook/: notifications_perf.md
serve/docs/ui-interaction-spec/: 01-tokens-input-atoms.md  02-display-atoms.md  03-shell-nav.md  04-chat-evidence-citation.md  05-kg-canvas.md  06-docs-ingest.md  07-reasoning-eval-settings.md  08-screens-modals-states-journeys.md  AI_PROMPT_GUIDE.md  FRONTEND_TECH_STACK.md  UI_INTERACTIONS.md
serve/infra/: docker-compose.yml
serve/infra/observability/: README.md  docker-compose.observability.yml
serve/migrations/: __init__.py  env.py
serve/migrations/versions/: __init__.py  m7_001_libraries_alter.py  m7_002_task_queue.py  m7_010_notifications.py  m7_011_activity_log.py  m7_012_library_config.py  m7_013_library_daily_cost.py  m7_020_answer_feedback.py  m7_021_eval_snapshots.py  m7_022_alerts.py  m7_030_library_purge_audit.py
serve/scripts/: dev_up.sh  eval_compare.py  eval_compare_planners.py  eval_gate.py  eval_prepare_retrieval.py  eval_prepare_review.py  eval_run.py  eval_score_claude.py  eval_smoke.py  export_openapi.py  generate_ui_images.py  load_kg_extracts.py  seed_frontend_documents.py  snapshot_all.sh
serve/tests/: conftest.py
serve/tests/integration/: test_auth_bearer.py  test_backup.py  test_conversations_endpoints.py  test_error_envelope.py  test_healthz.py  test_memory_endpoints.py  test_metrics_endpoint.py  test_minio_presign.py
serve/tests/unit/: test_api_errors.py  test_budget.py  test_cached_embedder.py  test_community_summarizer.py  test_compactor.py  test_config.py  test_context_query_rewriter.py  test_context_service.py  test_conversation_repo.py  test_crag_evaluator.py  test_direct_rag.py  test_errors.py  test_eval_loader.py  test_eval_metrics_deterministic.py  test_eval_metrics_llm_judge.py  test_eval_reporter.py  test_eval_runner.py  test_eventbus.py  test_events.py  test_global_rag.py  test_hybrid_coordinator.py  test_hypothesis_task.py  test_ingest_idempotency.py  test_ingest_state.py  test_kg_schema.py  test_leiden_detector.py  test_library_admin.py  test_library_fs.py  test_llm_extractor.py  test_llm_retry.py  test_models.py  test_observability_instrumentation.py  test_observability_langfuse.py  test_observability_metrics.py  test_observability_tracing.py  test_openai_compat_llm.py  test_openai_compat_rerank.py  test_openai_embedder.py  test_prompt_composer.py  test_protocols.py  (+15 more)
(+159 files in other folders)
